# powerschoolapi

./: .gitignore  README.md  pyproject.toml
powerschoolapi_cars1n/: AccessToken.py  BaseFunctions.py
src/: AccessToken.py  DataAccess.py  Setup.py  __init__.py
src/powerschoolapi_cars1n/: BaseFunctions.py
