[project]
name = "powerschoolapi_cars1n"
version = "1.0"
authors = [
  { name="Carson Williams", email="14williamsc@gmail.com" },
]
description = "A small package to interact with powerschool's api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
install_requires=[
    'requests',
    'python-dotenv',
    'dotenv',
    'urllib3',
    'icecream'
    # other dependencies
],

[project.urls]
Homepage = "https://github.com/cars1n/powerschoolapi"
